test/self-test/phase2/test_3.out
Error type 8 at line 11: incompatible return type
Error type 13 at line 13: accessing an undefined structure member
