test/self-test/phase2/test_3.spl
struct AA {
    struct BB b;
};

struct BB {};

int func()
{
    struct AA a;
    a.b.c;
    return;
}